# Orange

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  run.bat  runwithoutbuild.bat
app/appOrange/: CMakeLists.txt
app/appOrange/src/: main.cpp  mesh_io.h
app/cusp_probe/: CMakeLists.txt
app/cusp_probe/src/: main.cpp
app/sandbox/: CMakeLists.txt
app/sandbox/src/: main.cpp
cmake/: dependencies.cmake
docs/: RUN_TESTS.md  TESTING.md  TEST_AUTOMATION.md  session-context-2026-06-20.md
engine/: CMakeLists.txt
engine/cmake/: OrangeApp.cmake
engine/core/: CMakeLists.txt
engine/core/include/orange/core/: application.h  ball_tree.h  bsp.h  buffer.h  bvh.h  color.h  console.h  crash_handler.h  debug_draw.h  draw_mode.h  font.h  geometry.h  half_edge.h  input.h  kdtree.h  loose_octree.h  marching_cubes_tables.h  math.h  mesh_generation.h  modes.h  morton3d.h  normals.h  occlusal_plane.h  occlusal_render.h  octree.h  plugin_loader.h  point_ops.h  poisson_reconstruction.h  primitives.h  rtree.h  sam_segment.h  screenshot.h  serialization.h  sparse_data_block.h  sparse_grid.h  tooth_segment.h  ui_layout.h  uniform_grid.h  window.h
engine/core/include/orange/ecs/: components.h  systems.h
engine/core/src/: application.cpp  console.cpp  crash_handler.cpp  plugin_loader.cpp  screenshot.cpp  systems.cpp  ui_layout.cpp  window.cpp
engine/core/src/geometry/: half_edge.cpp  mesh_generation.cpp  normals.cpp  occlusal_plane.cpp  occlusal_render.cpp  point_ops.cpp  poisson_reconstruction.cpp  primitives.cpp  sparse_data_block.cpp  sparse_grid.cpp  tooth_segment.cpp
engine/core/src/io/: serialization.cpp
engine/core/src/ml/: sam_segment.cpp
engine/core/src/modes/: modes.cpp
engine/plugins/render_gl/src/: gl_loader.cpp  gl_loader.h  gl_renderer.cpp  gl_renderer.h  plugin_main.cpp
engine/plugins/render_vk/: CMakeLists.txt
engine/plugins/render_vk/shaders/: grid.frag  mesh.frag  mesh.vert  points.frag
engine/plugins/render_vk/src/: plugin_main.cpp  vk_renderer.cpp  vk_renderer.h
engine/render_api/: CMakeLists.txt
engine/render_api/include/orange/render/: buffer.h  export.h  plugin_abi.h  renderer.h  types.h
engine/tests/: CMakeLists.txt  bench_spatial.cpp  check_ply.cpp  poisson_tests.cpp  test_gui.cpp  test_orange.cpp  test_spatial.cpp
markdown/: occlusal_segmentation_pipeline.md
plugins/render_gl/: CMakeLists.txt
plugins/render_gl/src/: gl_loader.cpp  gl_loader.h  gl_renderer.cpp  gl_renderer.h
plugins/render_vk/: CMakeLists.txt
plugins/render_vk/shaders/: grid.frag  grid.vert  mesh.frag  mesh.vert
plugins/render_vk/src/: vk_renderer.cpp  vk_renderer.h
scripts/: run_tests.ps1  run_tests.sh
